[FIX]style.css
form-footer was not stretched from side to side

--- a/style.css
+++ b/style.css
@@ -204,6 +204,8 @@ html {
   padding: 2.4rem 2rem;
   position: absolute;
   bottom: 0;
+  left: 0;
+  right: 0;
 }
 .form-footer--container {
   display: flex;
